--- a/clientcpp/UfrmMain.fmx
+++ b/clientcpp/UfrmMain.fmx
@@ -1,12 +1,15 @@
 object frmMain: TfrmMain
-  Left = 0
-  Top = 0
+  Left = 300
+  Top = 80
   Caption = 'Form1'
   ClientHeight = 480
   ClientWidth = 640
+  Position = Designed
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  Left = 300
+  Top = 80
   DesignerMasterStyle = 0
   object lyMain: TLayout
     Align = Client
@@ -38,6 +41,8 @@ object frmMain: TfrmMain
         StyleLookup = ''
         TabOrder = 0
         Text = 'TabItem1'
+        ExplicitSize.cx = 8.000000000000000000
+        ExplicitSize.cy = 8.000000000000000000
         object lyLeft: TLayout
           Align = Left
           Size.Width = 319.000000000000000000
@@ -52,42 +57,206 @@ object frmMain: TfrmMain
           Size.Height = 480.000000000000000000
           Size.PlatformDefault = False
           TabOrder = 1
-          object lyPanelLogin: TLayout
-            Align = Center
-            Size.Width = 250.000000000000000000
-            Size.Height = 200.000000000000000000
+          object tbSignLogin: TTabControl
+            Align = Client
+            Size.Width = 319.000000000000000000
+            Size.Height = 480.000000000000000000
             Size.PlatformDefault = False
+            TabIndex = 0
             TabOrder = 0
-            object txtusername: TEdit
-              Touch.InteractiveGestures = [LongTap, DoubleTap]
-              Align = Top
-              TabOrder = 1
-              Position.Y = 60.000000000000000000
-              Margins.Top = 60.000000000000000000
-              Size.Width = 250.000000000000000000
-              Size.Height = 30.000000000000000000
+            TabPosition = None
+            Sizes = (
+              319s
+              480s
+              319s
+              480s)
+            object tbi_Login: TTabItem
+              CustomIcon = <
+                item
+                end>
+              IsSelected = True
+              Size.Width = 8.000000000000000000
+              Size.Height = 8.000000000000000000
               Size.PlatformDefault = False
-              TextPrompt = ':long_txtusername:'
-            end
-            object txtpassword: TEdit
-              Touch.InteractiveGestures = [LongTap, DoubleTap]
-              Align = Bottom
+              StyleLookup = ''
               TabOrder = 0
-              Position.Y = 110.000000000000000000
-              Margins.Bottom = 30.000000000000000000
-              Size.Width = 250.000000000000000000
-              Size.Height = 30.000000000000000000
-              Size.PlatformDefault = False
-              TextPrompt = ':login_txtpassword:'
+              Text = 'TabItem1'
+              object lyPanelLogin: TLayout
+                Align = Center
+                Size.Width = 265.000000000000000000
+                Size.Height = 200.000000000000000000
+                Size.PlatformDefault = False
+                TabOrder = 0
+                object txtusername: TEdit
+                  Touch.InteractiveGestures = [LongTap, DoubleTap]
+                  Align = Bottom
+                  TabOrder = 1
+                  Position.X = 20.000000000000000000
+                  Position.Y = 3.000000000000000000
+                  Margins.Left = 20.000000000000000000
+                  Margins.Right = 20.000000000000000000
+                  Margins.Bottom = 30.000000000000000000
+                  Size.Width = 225.000000000000000000
+                  Size.Height = 30.000000000000000000
+                  Size.PlatformDefault = False
+                  TextPrompt = ':long_txtusername:'
+                end
+                object txtpassword: TEdit
+                  Touch.InteractiveGestures = [LongTap, DoubleTap]
+                  Align = Bottom
+                  TabOrder = 0
+                  Position.X = 20.000000000000000000
+                  Position.Y = 63.000000000000000000
+                  Margins.Left = 20.000000000000000000
+                  Margins.Right = 20.000000000000000000
+                  Margins.Bottom = 40.000000000000000000
+                  Size.Width = 225.000000000000000000
+                  Size.Height = 30.000000000000000000
+                  Size.PlatformDefault = False
+                  TextPrompt = ':login_txtpassword:'
+                end
+                object btnstartsession: TButton
+                  Align = Bottom
+                  Margins.Left = 20.000000000000000000
+                  Margins.Right = 20.000000000000000000
+                  Margins.Bottom = 10.000000000000000000
+                  Position.X = 20.000000000000000000
+                  Position.Y = 133.000000000000000000
+                  Size.Width = 225.000000000000000000
+                  Size.Height = 30.000000000000000000
+                  Size.PlatformDefault = False
+                  TabOrder = 2
+                  Text = ':login_btnstartsession:'
+                end
+                object btnsignin: TLabel
+                  Align = Bottom
+                  Cursor = crHandPoint
+                  StyledSettings = [Family, Size]
+                  HitTest = True
+                  Margins.Left = 20.000000000000000000
+                  Margins.Right = 20.000000000000000000
+                  Margins.Bottom = 10.000000000000000000
+                  Position.X = 20.000000000000000000
+                  Position.Y = 173.000000000000000000
+                  Size.Width = 225.000000000000000000
+                  Size.Height = 17.000000000000000000
+                  Size.PlatformDefault = False
+                  TextSettings.Font.StyleExt = {04040000000000000004000000}
+                  TextSettings.FontColor = claCornflowerblue
+                  TextSettings.HorzAlign = Center
+                  Text = ':login_btnsignin:'
+                  TabOrder = 3
+                  OnClick = btnsigninClick
+                end
+              end
             end
-            object btnstartsession: TButton
-              Align = Bottom
-              Position.Y = 170.000000000000000000
-              Size.Width = 250.000000000000000000
-              Size.Height = 30.000000000000000000
+            object tbi_Signin: TTabItem
+              CustomIcon = <
+                item
+                end>
+              IsSelected = False
+              Size.Width = 8.000000000000000000
+              Size.Height = 8.000000000000000000
               Size.PlatformDefault = False
-              TabOrder = 2
-              Text = ':login_btnstartsession:'
+              StyleLookup = ''
+              TabOrder = 0
+              Text = 'TabItem2'
+              object lyPanelSignin: TLayout
+                Align = Center
+                Size.Width = 265.000000000000000000
+                Size.Height = 390.000000000000000000
+                Size.PlatformDefault = False
+                TabOrder = 0
+                object txtusername_s: TEdit
+                  Touch.InteractiveGestures = [LongTap, DoubleTap]
+                  Align = Bottom
+                  TabOrder = 0
+                  Position.X = 20.000000000000000000
+                  Position.Y = 43.000000000000000000
+                  Margins.Left = 20.000000000000000000
+                  Margins.Right = 20.000000000000000000
+                  Margins.Bottom = 30.000000000000000000
+                  Size.Width = 225.000000000000000000
+                  Size.Height = 30.000000000000000000
+                  Size.PlatformDefault = False
+                  TextPrompt = ':login_txtusername:'
+                end
+                object txtemail_s: TEdit
+                  Touch.InteractiveGestures = [LongTap, DoubleTap]
+                  Align = Bottom
+                  TabOrder = 1
+                  Position.X = 20.000000000000000000
+                  Position.Y = 103.000000000000000000
+                  Margins.Left = 20.000000000000000000
+                  Margins.Right = 20.000000000000000000
+                  Margins.Bottom = 30.000000000000000000
+                  Size.Width = 225.000000000000000000
+                  Size.Height = 30.000000000000000000
+                  Size.PlatformDefault = False
+                  TextPrompt = ':signin_txtemail:'
+                end
+                object txtpassword_s: TEdit
+                  Touch.InteractiveGestures = [LongTap, DoubleTap]
+                  Align = Bottom
+                  TabOrder = 2
+                  Position.X = 20.000000000000000000
+                  Position.Y = 163.000000000000000000
+                  Margins.Left = 20.000000000000000000
+                  Margins.Right = 20.000000000000000000
+                  Margins.Bottom = 30.000000000000000000
+                  Size.Width = 225.000000000000000000
+                  Size.Height = 30.000000000000000000
+                  Size.PlatformDefault = False
+                  TextPrompt = ':login_txtpassword:'
+                end
+                object txtpassconfirm_s: TEdit
+                  Touch.InteractiveGestures = [LongTap, DoubleTap]
+                  Align = Bottom
+                  TabOrder = 3
+                  Position.X = 20.000000000000000000
+                  Position.Y = 223.000000000000000000
+                  Margins.Left = 20.000000000000000000
+                  Margins.Right = 20.000000000000000000
+                  Margins.Bottom = 50.000000000000000000
+                  Size.Width = 225.000000000000000000
+                  Size.Height = 30.000000000000000000
+                  Size.PlatformDefault = False
+                  TextPrompt = ':signin_txtpassconfirm_s:'
+                end
+                object btnsignin_s: TButton
+                  Align = Bottom
+                  Margins.Left = 20.000000000000000000
+                  Margins.Right = 20.000000000000000000
+                  Margins.Bottom = 10.000000000000000000
+                  Position.X = 20.000000000000000000
+                  Position.Y = 303.000000000000000000
+                  Size.Width = 225.000000000000000000
+                  Size.Height = 30.000000000000000000
+                  Size.PlatformDefault = False
+                  TabOrder = 4
+                  Text = ':login_btnsignin:'
+                end
+                object btnstartsession_s: TLabel
+                  Align = Bottom
+                  Cursor = crHandPoint
+                  StyledSettings = [Family, Size]
+                  HitTest = True
+                  Margins.Left = 20.000000000000000000
+                  Margins.Right = 20.000000000000000000
+                  Margins.Bottom = 30.000000000000000000
+                  Position.X = 20.000000000000000000
+                  Position.Y = 343.000000000000000000
+                  Size.Width = 225.000000000000000000
+                  Size.Height = 17.000000000000000000
+                  Size.PlatformDefault = False
+                  TextSettings.Font.StyleExt = {04040000000000000004000000}
+                  TextSettings.FontColor = claCornflowerblue
+                  TextSettings.HorzAlign = Center
+                  Text = ':login_btnstartsession:'
+                  TabOrder = 5
+                  OnClick = btnstartsession_sClick
+                end
+              end
             end
           end
         end
@@ -103,6 +272,58 @@ object frmMain: TfrmMain
         StyleLookup = ''
         TabOrder = 0
         Text = 'TabItem2'
+        ExplicitSize.cx = 8.000000000000000000
+        ExplicitSize.cy = 8.000000000000000000
+      end
+    end
+    object lyMainPrompt: TLayout
+      Align = Client
+      Size.Width = 640.000000000000000000
+      Size.Height = 480.000000000000000000
+      Size.PlatformDefault = False
+      Visible = False
+      TabOrder = 1
+      object rtcBackground: TRectangle
+        Align = Contents
+        Fill.Color = x50000000
+        Size.Width = 640.000000000000000000
+        Size.Height = 480.000000000000000000
+        Size.PlatformDefault = False
+        Stroke.Kind = None
+        object rctBack_end: TRectangle
+          Align = Center
+          Size.Width = 400.000000000000000000
+          Size.Height = 200.000000000000000000
+          Size.PlatformDefault = False
+          Stroke.Kind = None
+          object lblmessage_prompt: TLabel
+            Align = Bottom
+            Margins.Left = 20.000000000000000000
+            Margins.Right = 20.000000000000000000
+            Margins.Bottom = 30.000000000000000000
+            Position.X = 20.000000000000000000
+            Position.Y = 25.000000000000000000
+            Size.Width = 360.000000000000000000
+            Size.Height = 103.000000000000000000
+            Size.PlatformDefault = False
+            TextSettings.VertAlign = Leading
+            Text = 'prompt_message'
+            TabOrder = 0
+          end
+          object btnok_prompt: TButton
+            Align = Bottom
+            Margins.Left = 100.000000000000000000
+            Margins.Right = 100.000000000000000000
+            Margins.Bottom = 20.000000000000000000
+            Position.X = 100.000000000000000000
+            Position.Y = 158.000000000000000000
+            Size.Width = 200.000000000000000000
+            Size.Height = 22.000000000000000000
+            Size.PlatformDefault = False
+            TabOrder = 1
+            Text = ':prompt_btnok_prompt:'
+          end
+        end
       end
     end
   end
