--- a/clientcpp/UfrmMain.fmx
+++ b/clientcpp/UfrmMain.fmx
@@ -58,215 +58,6 @@ object frmMain: TfrmMain
           Size.Height = 480.000000000000000000
           Size.PlatformDefault = False
           TabOrder = 1
-          object tbSignLogin: TTabControl
-            Align = Client
-            Size.Width = 319.000000000000000000
-            Size.Height = 480.000000000000000000
-            Size.PlatformDefault = False
-            TabIndex = 1
-            TabOrder = 0
-            TabPosition = None
-            Sizes = (
-              319s
-              480s
-              319s
-              480s)
-            object tbi_Login: TTabItem
-              CustomIcon = <
-                item
-                end>
-              IsSelected = False
-              Size.Width = 8.000000000000000000
-              Size.Height = 8.000000000000000000
-              Size.PlatformDefault = False
-              StyleLookup = ''
-              TabOrder = 0
-              Text = 'TabItem1'
-              ExplicitSize.cx = 8.000000000000000000
-              ExplicitSize.cy = 8.000000000000000000
-              object lyPanelLogin: TLayout
-                Align = Center
-                Size.Width = 265.000000000000000000
-                Size.Height = 200.000000000000000000
-                Size.PlatformDefault = False
-                TabOrder = 0
-                object txtusername: TEdit
-                  Touch.InteractiveGestures = [LongTap, DoubleTap]
-                  Align = Bottom
-                  TabOrder = 1
-                  Text = 'admin'
-                  Position.X = 20.000000000000000000
-                  Position.Y = 3.000000000000000000
-                  Margins.Left = 20.000000000000000000
-                  Margins.Right = 20.000000000000000000
-                  Margins.Bottom = 30.000000000000000000
-                  Size.Width = 225.000000000000000000
-                  Size.Height = 30.000000000000000000
-                  Size.PlatformDefault = False
-                  TextPrompt = ':login_txtusername:'
-                end
-                object txtpassword: TEdit
-                  Touch.InteractiveGestures = [LongTap, DoubleTap]
-                  Align = Bottom
-                  TabOrder = 0
-                  Text = 'admin'
-                  Position.X = 20.000000000000000000
-                  Position.Y = 63.000000000000000000
-                  Margins.Left = 20.000000000000000000
-                  Margins.Right = 20.000000000000000000
-                  Margins.Bottom = 40.000000000000000000
-                  Size.Width = 225.000000000000000000
-                  Size.Height = 30.000000000000000000
-                  Size.PlatformDefault = False
-                  TextPrompt = ':login_txtpassword:'
-                end
-                object btnstartsession: TButton
-                  Align = Bottom
-                  Margins.Left = 20.000000000000000000
-                  Margins.Right = 20.000000000000000000
-                  Margins.Bottom = 10.000000000000000000
-                  Position.X = 20.000000000000000000
-                  Position.Y = 133.000000000000000000
-                  Size.Width = 225.000000000000000000
-                  Size.Height = 30.000000000000000000
-                  Size.PlatformDefault = False
-                  TabOrder = 2
-                  Text = ':login_btnstartsession:'
-                  OnClick = btnstartsessionClick
-                end
-                object btnsignin: TLabel
-                  Align = Bottom
-                  Cursor = crHandPoint
-                  StyledSettings = [Family, Size]
-                  HitTest = True
-                  Margins.Left = 20.000000000000000000
-                  Margins.Right = 20.000000000000000000
-                  Margins.Bottom = 10.000000000000000000
-                  Position.X = 20.000000000000000000
-                  Position.Y = 173.000000000000000000
-                  Size.Width = 225.000000000000000000
-                  Size.Height = 17.000000000000000000
-                  Size.PlatformDefault = False
-                  TextSettings.Font.StyleExt = {04040000000000000004000000}
-                  TextSettings.FontColor = claCornflowerblue
-                  TextSettings.HorzAlign = Center
-                  Text = ':login_btnsignin:'
-                  TabOrder = 3
-                  OnClick = btnsigninClick
-                end
-              end
-            end
-            object tbi_Signin: TTabItem
-              CustomIcon = <
-                item
-                end>
-              IsSelected = True
-              Size.Width = 8.000000000000000000
-              Size.Height = 8.000000000000000000
-              Size.PlatformDefault = False
-              StyleLookup = ''
-              TabOrder = 0
-              Text = 'TabItem2'
-              ExplicitSize.cx = 8.000000000000000000
-              ExplicitSize.cy = 8.000000000000000000
-              object lyPanelSignin: TLayout
-                Align = Center
-                Size.Width = 265.000000000000000000
-                Size.Height = 390.000000000000000000
-                Size.PlatformDefault = False
-                TabOrder = 0
-                object txtusername_s: TEdit
-                  Touch.InteractiveGestures = [LongTap, DoubleTap]
-                  Align = Bottom
-                  TabOrder = 0
-                  Position.X = 20.000000000000000000
-                  Position.Y = 43.000000000000000000
-                  Margins.Left = 20.000000000000000000
-                  Margins.Right = 20.000000000000000000
-                  Margins.Bottom = 30.000000000000000000
-                  Size.Width = 225.000000000000000000
-                  Size.Height = 30.000000000000000000
-                  Size.PlatformDefault = False
-                  TextPrompt = ':login_txtusername:'
-                end
-                object txtemail_s: TEdit
-                  Touch.InteractiveGestures = [LongTap, DoubleTap]
-                  Align = Bottom
-                  TabOrder = 1
-                  Position.X = 20.000000000000000000
-                  Position.Y = 103.000000000000000000
-                  Margins.Left = 20.000000000000000000
-                  Margins.Right = 20.000000000000000000
-                  Margins.Bottom = 30.000000000000000000
-                  Size.Width = 225.000000000000000000
-                  Size.Height = 30.000000000000000000
-                  Size.PlatformDefault = False
-                  TextPrompt = ':signin_txtemail:'
-                end
-                object txtpassword_s: TEdit
-                  Touch.InteractiveGestures = [LongTap, DoubleTap]
-                  Align = Bottom
-                  TabOrder = 2
-                  Position.X = 20.000000000000000000
-                  Position.Y = 163.000000000000000000
-                  Margins.Left = 20.000000000000000000
-                  Margins.Right = 20.000000000000000000
-                  Margins.Bottom = 30.000000000000000000
-                  Size.Width = 225.000000000000000000
-                  Size.Height = 30.000000000000000000
-                  Size.PlatformDefault = False
-                  TextPrompt = ':login_txtpassword:'
-                end
-                object txtpassconfirm_s: TEdit
-                  Touch.InteractiveGestures = [LongTap, DoubleTap]
-                  Align = Bottom
-                  TabOrder = 3
-                  Position.X = 20.000000000000000000
-                  Position.Y = 223.000000000000000000
-                  Margins.Left = 20.000000000000000000
-                  Margins.Right = 20.000000000000000000
-                  Margins.Bottom = 50.000000000000000000
-                  Size.Width = 225.000000000000000000
-                  Size.Height = 30.000000000000000000
-                  Size.PlatformDefault = False
-                  TextPrompt = ':signin_txtpassconfirm_s:'
-                end
-                object btnsignin_s: TButton
-                  Align = Bottom
-                  Margins.Left = 20.000000000000000000
-                  Margins.Right = 20.000000000000000000
-                  Margins.Bottom = 10.000000000000000000
-                  Position.X = 20.000000000000000000
-                  Position.Y = 303.000000000000000000
-                  Size.Width = 225.000000000000000000
-                  Size.Height = 30.000000000000000000
-                  Size.PlatformDefault = False
-                  TabOrder = 4
-                  Text = ':login_btnsignin:'
-                end
-                object btnstartsession_s: TLabel
-                  Align = Bottom
-                  Cursor = crHandPoint
-                  StyledSettings = [Family, Size]
-                  HitTest = True
-                  Margins.Left = 20.000000000000000000
-                  Margins.Right = 20.000000000000000000
-                  Margins.Bottom = 30.000000000000000000
-                  Position.X = 20.000000000000000000
-                  Position.Y = 343.000000000000000000
-                  Size.Width = 225.000000000000000000
-                  Size.Height = 17.000000000000000000
-                  Size.PlatformDefault = False
-                  TextSettings.Font.StyleExt = {04040000000000000004000000}
-                  TextSettings.FontColor = claCornflowerblue
-                  TextSettings.HorzAlign = Center
-                  Text = ':login_btnstartsession:'
-                  TabOrder = 5
-                  OnClick = btnstartsession_sClick
-                end
-              end
-            end
-          end
         end
       end
       object tbiApplication: TTabItem
@@ -282,6 +73,13 @@ object frmMain: TfrmMain
         Text = 'TabItem2'
         ExplicitSize.cx = 8.000000000000000000
         ExplicitSize.cy = 8.000000000000000000
+        object lyApplication: TLayout
+          Align = Client
+          Size.Width = 640.000000000000000000
+          Size.Height = 480.000000000000000000
+          Size.PlatformDefault = False
+          TabOrder = 0
+        end
       end
     end
     object lyMainPrompt: TLayout
