--- a/clientcpp/UfrmApp.fmx
+++ b/clientcpp/UfrmApp.fmx
@@ -14,5 +14,57 @@ object frmApp: TfrmApp
     Size.Height = 480.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 0
+    object tcMain: TTabControl
+      Align = Client
+      Size.Width = 640.000000000000000000
+      Size.Height = 480.000000000000000000
+      Size.PlatformDefault = False
+      TabIndex = 0
+      TabOrder = 0
+      TabPosition = None
+      Sizes = (
+        640s
+        480s
+        640s
+        480s)
+      object tbiNotifications: TTabItem
+        CustomIcon = <
+          item
+          end>
+        IsSelected = True
+        Size.Width = 8.000000000000000000
+        Size.Height = 8.000000000000000000
+        Size.PlatformDefault = False
+        StyleLookup = ''
+        TabOrder = 0
+        Text = 'TabItem1'
+        object lyNotifications: TLayout
+          Align = Client
+          Size.Width = 640.000000000000000000
+          Size.Height = 480.000000000000000000
+          Size.PlatformDefault = False
+          TabOrder = 0
+        end
+      end
+      object tbiChatRoom: TTabItem
+        CustomIcon = <
+          item
+          end>
+        IsSelected = False
+        Size.Width = 8.000000000000000000
+        Size.Height = 8.000000000000000000
+        Size.PlatformDefault = False
+        StyleLookup = ''
+        TabOrder = 0
+        Text = 'TabItem2'
+        object lyChatRoom: TLayout
+          Align = Client
+          Size.Width = 640.000000000000000000
+          Size.Height = 480.000000000000000000
+          Size.PlatformDefault = False
+          TabOrder = 0
+        end
+      end
+    end
   end
 end
