--- a/clientcpp/UfrmMain.fmx
+++ b/clientcpp/UfrmMain.fmx
@@ -1,10 +1,13 @@
 object frmMain: TfrmMain
   Left = 300
   Top = 80
+  Border.Styling = False
+  BorderIcons = []
+  BorderStyle = None
   Caption = 'Form1'
   ClientHeight = 480
   ClientWidth = 640
-  Position = Designed
+  Position = ScreenCenter
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
@@ -21,16 +24,16 @@ object frmMain: TfrmMain
     object tbMain: TTabControl
       Align = Client
       Size.Width = 640.000000000000000000
-      Size.Height = 480.000000000000000000
+      Size.Height = 450.000000000000000000
       Size.PlatformDefault = False
       TabIndex = 0
       TabOrder = 0
       TabPosition = None
       Sizes = (
         640s
-        480s
+        450s
         640s
-        480s)
+        450s)
       object tbiLogin: TTabItem
         CustomIcon = <
           item
@@ -44,20 +47,12 @@ object frmMain: TfrmMain
         Text = 'TabItem1'
         ExplicitSize.cx = 8.000000000000000000
         ExplicitSize.cy = 8.000000000000000000
-        object lyLeft: TLayout
-          Align = Left
-          Size.Width = 319.000000000000000000
-          Size.Height = 480.000000000000000000
+        object lyLogin: TLayout
+          Align = Client
+          Size.Width = 640.000000000000000000
+          Size.Height = 450.000000000000000000
           Size.PlatformDefault = False
           TabOrder = 0
-        end
-        object lyRight: TLayout
-          Align = Right
-          Position.X = 321.000000000000000000
-          Size.Width = 319.000000000000000000
-          Size.Height = 480.000000000000000000
-          Size.PlatformDefault = False
-          TabOrder = 1
         end
       end
       object tbiApplication: TTabItem
@@ -76,7 +71,7 @@ object frmMain: TfrmMain
         object lyApplication: TLayout
           Align = Client
           Size.Width = 640.000000000000000000
-          Size.Height = 480.000000000000000000
+          Size.Height = 450.000000000000000000
           Size.PlatformDefault = False
           TabOrder = 0
         end
@@ -131,6 +126,27 @@ object frmMain: TfrmMain
             OnClick = btnok_promptClick
           end
         end
+      end
+    end
+    object tbTool: TToolBar
+      Size.Width = 640.000000000000000000
+      Size.Height = 30.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 2
+      object btnQuit: TButton
+        Align = Right
+        Margins.Top = 5.000000000000000000
+        Margins.Right = 5.000000000000000000
+        Margins.Bottom = 5.000000000000000000
+        Position.X = 607.000000000000000000
+        Position.Y = 5.000000000000000000
+        Size.Width = 28.000000000000000000
+        Size.Height = 20.000000000000000000
+        Size.PlatformDefault = False
+        StyleLookup = 'stoptoolbutton'
+        TabOrder = 0
+        Text = 'Button1'
+        OnClick = btnQuitClick
       end
     end
   end
