--- a/clientcpp/Views/UfrmArticleboard.fmx
+++ b/clientcpp/Views/UfrmArticleboard.fmx
@@ -14,14 +14,70 @@ object frmArticleboard: TfrmArticleboard
     Size.Height = 480.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 1
-    object vsbBoard: TVertScrollBox
+    object lvDashboard: TListView
+      ItemAppearanceClassName = 'TListItemAppearance'
+      ItemEditAppearanceClassName = 'TListItemShowCheckAppearance'
+      HeaderAppearanceClassName = 'TListHeaderObjects'
+      FooterAppearanceClassName = 'TListHeaderObjects'
       Align = Client
       Size.Width = 440.000000000000000000
       Size.Height = 480.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 0
-      Viewport.Width = 440.000000000000000000
-      Viewport.Height = 480.000000000000000000
+    end
+    object lbiTemplateDB: TListBoxItem
+      Size.Width = 441.000000000000000000
+      Size.Height = 337.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 1
+      Visible = False
+      object imgArticleImg: TImage
+        MultiResBitmap = <
+          item
+          end>
+        Align = Top
+        Margins.Left = 5.000000000000000000
+        Margins.Top = 10.000000000000000000
+        Margins.Right = 5.000000000000000000
+        Margins.Bottom = 5.000000000000000000
+        Position.X = 5.000000000000000000
+        Position.Y = 10.000000000000000000
+        Size.Width = 431.000000000000000000
+        Size.Height = 249.000000000000000000
+        Size.PlatformDefault = False
+      end
+      object lbltitlearticle: TLabel
+        Align = Top
+        Cursor = crHandPoint
+        StyledSettings = [Family, Size, FontColor]
+        HitTest = True
+        Margins.Left = 10.000000000000000000
+        Margins.Top = 10.000000000000000000
+        Margins.Right = 10.000000000000000000
+        Position.X = 10.000000000000000000
+        Position.Y = 274.000000000000000000
+        Size.Width = 421.000000000000000000
+        Size.Height = 32.000000000000000000
+        Size.PlatformDefault = False
+        TextSettings.Font.StyleExt = {00060000000000000004000000}
+        TextSettings.HorzAlign = Center
+        Text = 'title_article'
+        TabOrder = 2
+      end
+      object lbldescarticle: TLabel
+        Align = Top
+        AutoSize = True
+        Margins.Left = 20.000000000000000000
+        Margins.Top = 5.000000000000000000
+        Margins.Right = 20.000000000000000000
+        Position.X = 20.000000000000000000
+        Position.Y = 311.000000000000000000
+        Size.Width = 401.000000000000000000
+        Size.Height = 16.000000000000000000
+        Size.PlatformDefault = False
+        Text = 'Description'
+        TabOrder = 3
+      end
     end
   end
 end
