--- a/clientcpp/Views/UfrmLogin.fmx
+++ b/clientcpp/Views/UfrmLogin.fmx
@@ -7,6 +7,8 @@ object frmLogin: TfrmLogin
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   DesignerMasterStyle = 0
   object lyViewLayout: TLayout
     Align = Client
@@ -290,6 +292,14 @@ object frmLogin: TfrmLogin
             end
           end
         end
+      end
+      object lyLoading: TLayout
+        Align = Client
+        Size.Width = 320.000000000000000000
+        Size.Height = 480.000000000000000000
+        Size.PlatformDefault = False
+        Visible = False
+        TabOrder = 1
       end
     end
   end
