--- a/clientpas/UfrmMain.fmx
+++ b/clientpas/UfrmMain.fmx
@@ -8,6 +8,7 @@ object frmMain: TfrmMain
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
   OnCreate = FormCreate
+  OnClose = FormClose
   DesignerMasterStyle = 0
   object lyMainView: TLayout
     Align = Client
